--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -45,5 +45,11 @@
 	<true/>
 	<key>UIApplicationSupportsIndirectInputEvents</key>
 	<true/>
+	<key>NSPhotoLibraryUsageDescription</key>
+    <string>PhotoLibrary</string>
+    <key>NSCameraUsageDescription</key>
+    <string>Camera</string>
+    <key>NSMicrophoneUsageDescription</key>
+    <string>Microphone</string>
 </dict>
 </plist>
