--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,8 @@ dependencies:
   http: ^1.0.0
   logging: ^1.2.0
   flutter_riverpod: ^2.3.6
+  image_picker: ^1.0.4
+  carousel_slider: ^4.2.1
 
 dev_dependencies:
   flutter_test:
