--- a/.github/workflows/github-ci.yml
+++ b/.github/workflows/github-ci.yml
@@ -12,7 +12,7 @@ env:
 on:
   push:
     branches:
-      - "tweet_feed"
+      - "feature/tweet_feed"
 
 jobs:
   # job 1 : twitter_clone_app_testing
