change dynamic imports to relative imports

--- a/.github/workflows/github-ci.yml
+++ b/.github/workflows/github-ci.yml
@@ -33,6 +33,7 @@ jobs:
 
       - name: Flutter test
         run: |
+          flutter clean
           flutter pub get
           flutter analyze
         # flutter test
