--- a/.github/workflows/github-ci.yml
+++ b/.github/workflows/github-ci.yml
@@ -39,50 +39,51 @@ jobs:
         # flutter test
 
   # jobs 2 : twitter_clone_app_android_build_deploy
-#  twitter_clone_app_android_build_deploy:
-#    if: true
-#    needs: twitter_clone_app_testing
-#    runs-on: ubuntu-22.04
-#    defaults:
-#      run:
-#        working-directory: .
-#    steps:
-#      - name: Checkout Repository
-#        uses: actions/checkout@v3
-#
-#      - name: Checkout Java Actions
-#        uses: actions/setup-java@v3
-#        with:
-#          distribution: ${{env.JAVA_DISTRIBUTION}}
-#          java-version: ${{env.JAVA_VERSION}}
-#
-#      - name: Checkout Flutter Actions
-#        uses: subosito/flutter-action@v2
-#        with:
-#          flutter-version: ${{env.FLUTTER_VERSION}}
-#          channel: ${{env.FLUTTER_CHANNEL}}
-#
-#      - name: Get Today Date
-#        id: date
-#        run: echo "::set-output name=date::$(date +'%Y-%m-%d')"
-#
-#      - name: Build the Android Apk
-#        run: |
-#          flutter pub get
-#          flutter build apk --release --split-per-abi --obfuscate --split-debug-info=./build/app/outputs/symbols
-#
-#      - name: Archive Files
-#        run: |
-#          sudo apt-get update
-#          sudo apt-get install zip
-#          zip -r archive.zip *
-#
-#      - name: Deploy on Google Drive
-#        uses: adityak74/google-drive-upload-git-action@main
-#        with:
-#          credentials: ${{secrets.CREDENTIALS}}
-#          filename: "./build/app/outputs/flutter-apk/app-armeabi-v7a-release.apk"
-#          folderId: ${{secrets.FOLDER_ID_DRIVE}}
-#          name: ${{secrets.APP_NAME}}_${{steps.date.outputs.date}}.apk
-#          overwrite: "true"
-#          mimeType: "application/vnd.android.package-archive"
+  twitter_clone_app_android_build_deploy:
+    if: true
+    needs: twitter_clone_app_testing
+    runs-on: ubuntu-22.04
+    defaults:
+      run:
+        working-directory: .
+    steps:
+      - name: Checkout Repository
+        uses: actions/checkout@v3
+
+      - name: Checkout Java Actions
+        uses: actions/setup-java@v3
+        with:
+          distribution: ${{env.JAVA_DISTRIBUTION}}
+          java-version: ${{env.JAVA_VERSION}}
+
+      - name: Checkout Flutter Actions
+        uses: subosito/flutter-action@v2
+        with:
+          flutter-version: ${{env.FLUTTER_VERSION}}
+          channel: ${{env.FLUTTER_CHANNEL}}
+
+      - name: Get Today Date
+        id: date
+        run: echo "::set-output name=date::$(date +'%Y-%m-%d')"
+
+      - name: Build the Android Apk
+        run: |
+          flutter pub get
+          flutter build apk --release --split-per-abi --obfuscate --split-debug-info=./build/app/outputs/symbols
+
+      - name: Archive Files
+        run: |
+          sudo apt-get update
+          sudo apt-get install zip
+          zip -r archive.zip *
+
+      - name: Deploy on Google Drive
+        uses: adityak74/google-drive-upload-git-action@main
+        with:
+          credentials: ${{secrets.DRIVE_CREDENTIALS}}
+          filename: "./build/app/outputs/flutter-apk/app-armeabi-v7a-release.apk"
+          folderId: ${{secrets.FOLDER_ID}}
+#          folderId: 1PuMPaHJ-OyoF9UYRVj7Hgj2AZWPHk5_F
+          name: ${{secrets.APP_NAME}}_${{steps.date.outputs.date}}.apk
+          overwrite: "true"
+          mimeType: "application/vnd.android.package-archive"
