upload archive.zip artefact

--- a/.github/workflows/github-ci.yml
+++ b/.github/workflows/github-ci.yml
@@ -81,7 +81,7 @@ jobs:
         uses: actions/upload-artifact@v3
         with:
           name: apk artefact upload
-          path: "build/app/outputs/flutter-apk/app-armeabi-v7a-release.apk"
+          path: "archive.zip"
 
       - name: Deploy on Google Drive
         uses: adityak74/google-drive-upload-git-action@main
