--- a/.github/workflows/github-ci.yml
+++ b/.github/workflows/github-ci.yml
@@ -71,23 +71,23 @@ jobs:
           flutter pub get
           flutter build apk --release --split-per-abi --obfuscate --split-debug-info=./build/app/outputs/symbols
 
-      - name: Archive Files
-        run: |
-          sudo apt-get update
-          sudo apt-get install zip
-          zip -r archive.zip *
+#      - name: Archive Files
+#        run: |
+#          sudo apt-get update
+#          sudo apt-get install zip
+#          zip -r archive.zip *
 
       - name: Upload Artifact
         uses: actions/upload-artifact@v3
         with:
           name: apk artefact upload
-          path: "archive.zip"
+          path: "build/app/outputs/flutter-apk/app-armeabi-v7a-release.apk"
 
       - name: Deploy on Google Drive
         uses: adityak74/google-drive-upload-git-action@main
         with:
           credentials: ${{secrets.DRIVE_CREDENTIALS}}
-          filename: "archive.zip"
+          filename: "build/app/outputs/flutter-apk/app-armeabi-v7a-release.apk"
           folderId: ${{secrets.FOLDER_ID}}
 #          folderId: 1PuMPaHJ-OyoF9UYRVj7Hgj2AZWPHk5_F
 #          folderId: 1PuMPaHJ-OyoF9UYRVj7Hgj2AZWPHk5_F
