--- a/.github/workflows/github-ci-ios.yml
+++ b/.github/workflows/github-ci-ios.yml
@@ -28,7 +28,7 @@ jobs:
           channel: ${{env.FLUTTER_CHANNEL}}
           architecture: x64
       - run: flutter pub get
-      - run: flutter test
+      - run: flutter analyze
       - run: flutter build ios --release --no-codesign
 
       - name: Get Today Date
