--- a/.github/workflows/github-ci-ios.yml
+++ b/.github/workflows/github-ci-ios.yml
@@ -1,4 +1,4 @@
-name: build_and_upload 🏗️
+name: build and upload ios 🏗️
 
 env:
   VSCODE_VERSION: "1.84.0"
@@ -28,18 +28,29 @@ jobs:
           channel: ${{env.FLUTTER_CHANNEL}}
           architecture: x64
       - run: flutter pub get
-      - run: flutter test
+      - run: flutter analyze
       - run: flutter build ios --release --no-codesign
 
       - name: Get Today Date
         id: date
-        run: echo "::set-output name=date::$(date +'%Y-%m-%d')"
+        run: | 
+          echo "::set-output name=date::$(date +'%Y-%m-%d')"
+          ls -la build
 
       - name: Archive Files
         run: |
           brew install zip
+          brew install tree
           zip -r archive.zip *
-
+          tree build
+  deploy:
+    if: true
+    needs: build_deploy
+    runs-on: ubuntu-22.04
+    defaults:
+      run:
+        working-directory: .
+    steps:
       - name: Upload Artifact
         uses: actions/upload-artifact@v3
         with:
