--- a/.github/workflows/github-ci-ios.yml
+++ b/.github/workflows/github-ci-ios.yml
@@ -30,6 +30,7 @@ jobs:
       - run: flutter pub get
       - run: flutter analyze
       - run: flutter build ios --release --no-codesign
+      - run: ls -lah build/
 
       - name: Get Today Date
         id: date
@@ -51,6 +52,11 @@ jobs:
       run:
         working-directory: .
     steps:
+      - name: Archive Files
+        run: |
+          brew install zip
+          zip -r archive.zip build/*
+
       - name: Upload Artifact
         uses: actions/upload-artifact@v3
         with:
@@ -67,4 +73,4 @@ jobs:
           #          folderId: 1PuMPaHJ-OyoF9UYRVj7Hgj2AZWPHk5_F
           name: ${{secrets.APP_NAME}}_${{steps.date.outputs.date}}
           overwrite: "true"
-          mimeType: "application/vnd.android.package-archive"
+          mimeType: "application/zip"
