--- a/.github/workflows/github-ci-ios.yml
+++ b/.github/workflows/github-ci-ios.yml
@@ -54,7 +54,8 @@ jobs:
     steps:
       - name: Archive Files
         run: |
-          brew install zip
+          sudo apt-get update
+          sudo apt-get install zip
           zip -r archive.zip build/*
 
       - name: Upload Artifact
@@ -73,9 +74,4 @@ jobs:
           #          folderId: 1PuMPaHJ-OyoF9UYRVj7Hgj2AZWPHk5_F
           name: ${{secrets.APP_NAME}}_${{steps.date.outputs.date}}
           overwrite: "true"
-<<<<<<< HEAD
-          mimeType: "application/zip"
-=======
           mimeType: "application/vnd.android.package-archive"
-
->>>>>>> c4d8d42b1d88ee852a54bcf271c1db86d58c154f
