--- a/.github/workflows/github-ci-ios.yml
+++ b/.github/workflows/github-ci-ios.yml
@@ -75,10 +75,5 @@ jobs:
           #          folderId: 1PuMPaHJ-OyoF9UYRVj7Hgj2AZWPHk5_F
           name: ${{secrets.APP_NAME}}_${{steps.date.outputs.date}}
           overwrite: "true"
-<<<<<<< HEAD
-          mimeType: "application/vnd.android.package-archive"
-=======
-          mimeType: "application/vnd.android.package-archive"
 
-
->>>>>>> 3745e115d8b983880bdf28b49202e620222400b0
+          mimeType: "application/zip"
